[package]
name = "fuzz-libpng"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "6.0"

[dependencies]
libafl = { version = "0.13.2" , features = ["default"] }
libafl_bolts = { version = "0.13.2" }
libafl_targets = { version = "0.13.2", features = [
  "sancov_pcguard_hitcounts",
  "libfuzzer",
  "sancov_cmplog",
] }
# TODO Include it only when building cc
libafl_cc = { version = "0.13.2" }
mimalloc = { version = "0.1.43", default-features = false }

[lib]
name = "libfuzzer_libpng"
crate-type = ["staticlib"]