[package]
name = "step-2"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl = { version = "0.13.2" }
libafl_cc = { version = "0.13.2" }
libafl_targets = { version = "0.13.2", features = [
    "libfuzzer",
    "sancov_pcguard_hitcounts",
    "sancov_cmplog",
] }
libafl_bolts = { version = "0.13.2" }
clap = "3.0.0-beta.5"

[lib]
name = "exercisetwo"
crate-type = [ "staticlib" ]

